# GoMuseum

./: .editorconfig  .env.example  .eslintignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  20251004-claude-sesion.md  ACCEPTANCE_SUMMARY_20251002_222839.md  ACCEPTANCE_SUMMARY_20251002_223334.md  ACCEPTANCE_SUMMARY_20251003_095649.md  ACCEPTANCE_SUMMARY_20251004_235438.md  ACCEPTANCE_SUMMARY_20251005_072503.md  ACCEPTANCE_SUMMARY_20251005_121419.md  ACCEPTANCE_SUMMARY_20251005_131332.md  ACCEPTANCE_SUMMARY_20251006_000941.md  ACCEPTANCE_TEST_SUMMARY.md  AGENTS.md  API_KEYS_SETUP_GUIDE.md  CACHE_FIX_README.md  CI_CD_GUIDE.md  CI_CD_VERIFICATION_REPORT.md  CI_CONFIGURATION.md  CLAUDE.md  COMMIT_READY.md  COVERAGE_IMPROVEMENT_REPORT.md  DEVELOPMENT_STANDARDS.md  MANUAL_ACCEPTANCE_GUIDE.md  MANUAL_SETUP_GUIDE.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICKFIX.md  QUICK_START.md  README.md  STEP1_FINAL_ACCEPTANCE.md  STEP1_RE_VALIDATION_REPORT.md  STEP2_COMPLETION_SUMMARY.md  STEP2_INTEGRATION_GUIDE.md  STEP2_TEST_VERIFICATION_REPORT.md  TEST_FRAMEWORK_SUMMARY.md  (+26 more)
backend/: .dockerignore  DATABASE_OPTIMIZATION_SUMMARY.md  Dockerfile  TESTING.md  main.py  museums.yaml  pyproject.toml  requirements.txt  test_api_connection.py  zz_cov_probe.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_create_recognition_results_table.py  002_optimize_recognition_indexes.py  003_create_stats_tables.py  004_fix_timestamp_default.py  005_add_explanation_tables.py  006_add_user_auth.py  007_allow_null_email.py  008_add_is_guest_field.py  009_user_benefits_and_cleanup.py  a3b3_add_content_status.py  d6ca257376ac_step1_data_foundation.py  e1a1_add_object_sources.py  f2a2_add_suggested_questions.py  g1d3_add_guide_section_type.py  h1e4_add_evidence_pack.py  i1f5_retire_overview_tab.py  j1g6_add_artists.py  k1h7_add_name_i18n.py  l1i8_add_recognition_demands.py  m1j9_add_artist_facts_i18n.py  n1k0_add_audio_keys.py  o1l1_add_object_embeddings.py  p1m2_add_recognition_events_and_museum_stats.py  q1n3_add_museum_intro.py  r1o4_add_llm_usage.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  rate_limit.py  security.py  token_blacklist.py
backend/app/models/: __init__.py  ai_service_log.py  artist.py  content.py  explanation.py  llm_usage.py  museum.py  museum_object.py  object_embedding.py  recognition_demand.py  recognition_event.py  recognition_result.py  recognition_stats.py  user.py  user_benefits.py
backend/app/schemas/: __init__.py  auth.py  explanation.py  recognition.py  tts.py  user.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  benefits_service.py  cache_service.py  content_cache.py  content_generation_service.py  content_repo.py  explanation_service.py  iap_verification_service.py  image_service.py  llm_usage.py  museum_repo.py  object_importer.py  recognition_service.py  tts_service.py
backend/app/utils/: __init__.py  database_utils.py  performance_monitor.py
backend/scripts/: backfill_embeddings.py  build_museum_pack.py  coverage_report.py  llm_cost_report.py  migrate_pack_to_db.py  migrate_redis_explanations.py  onboard.py  ops_guard.py  prewarm_explanations.py  rescan_artist_names.py  rescan_language.py  seed_sections.py  staging_prune.py  sync_staging_from_prod.py  vet_view_images.py
backend/scripts/recognition_bench/: build_index.py  build_testset.py  distort.py  embed.py  export_manifest.py  export_onnx.py  metrics.py  run_eval.py
backend/tests/: conftest.py  test_main.py
backend/tests/e2e/: test_recognition_e2e.py
backend/tests/fixtures/: generate_test_images.py  image_helpers.py
backend/tests/integration/: test_account_deletion.py  test_artist_model.py  test_audio_endpoint.py  test_auth_security.py  test_backfill_languages.py  test_backfill_names.py  test_batch_names.py  test_catalog_loader.py  test_content_persist.py  test_content_report.py  test_content_status.py  test_database.py  test_evidence_pack_column.py  test_generate_pipeline.py  test_image_materializer.py  test_lazy_generation.py  test_list_objects.py  test_museum_intro.py  test_museum_pack_intro.py  test_museum_repo.py  test_museums_endpoint_db.py  test_object_content_endpoint.py  test_object_importer.py  test_objects_endpoint.py  test_onboard_flow.py  test_pack_and_content_facts.py  test_quota_abuse.py  test_recognition_flow.py  test_recognize_flow.py  test_rescan_artist_names.py  test_rescan_language.py  test_search_endpoint.py  test_section_audio.py  test_staging_prune.py  test_suggested_questions.py  test_tts_endpoint.py
backend/tests/unit/: test_ops_guard.py  (+1 more)
(+744 files in other folders)
