# GoMuseum 后端 Python 项目配置

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gomuseum-backend"
version = "0.1.0"
description = "GoMuseum AI-powered museum guide backend API"
authors = [
    {name = "GoMuseum Team", email = "dev@gomuseum.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
    "email-validator>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pinecone-client>=2.2.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "imagehash>=4.3.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "opencc-python-reimplemented (>=0.1.7,<0.2.0)",
    "lingua-language-detector (>=2.1.1,<3.0.0)",
    "onnxruntime (>=1.27.0,<2.0.0)"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0"
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "httpx>=0.26.0",
    "fakeredis>=2.21.0"
]

[project.urls]
Homepage = "https://github.com/gomuseum/gomuseum"
Repository = "https://github.com/gomuseum/gomuseum.git"
Issues = "https://github.com/gomuseum/gomuseum/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
skip = ["migrations", ".venv"]
skip_gitignore = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "migrations/",
    "tests/",
    "build/",
    "dist/"
]

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "anthropic.*",
    "pinecone.*",
    "redis.*",
    "imagehash.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=63",
    "--cov-config=pyproject.toml"
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/conftest.py",
    "app/api/v1/endpoints/chat.py",
    "app/api/v1/endpoints/content.py",
    "app/api/v1/endpoints/history.py",
    "app/api/v1/endpoints/payment.py",
    "app/services/benefits_service.py",
    "app/services/content_generation_service.py",
    "app/services/iap_verification_service.py",
    "app/services/tts_service.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = true
fail_under = 63


[dependency-groups]
bench = [
    "onnx (>=1.16.0,<2.0.0)",
    "torch (>=2.13.0,<3.0.0)",
    "transformers (>=5.13.0,<6.0.0)"
]
